--- a/Blazorships/Blazorships.Client/Blazorships.Client.csproj
+++ b/Blazorships/Blazorships.Client/Blazorships.Client.csproj
@@ -12,7 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.4.0-preview1-10273" />
+    <PackageReference Include="BlazoredLocalStorage" Version="0.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.4.0-preview1-10282" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.4.0-preview1-10273" />
   </ItemGroup>
 
