--- a/Blazorships/Blazorships.Server/Blazorships.Server.csproj
+++ b/Blazorships/Blazorships.Server/Blazorships.Server.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <UserSecretsId>BlazorshipsCom</UserSecretsId>
     <RestoreSources>
       $(RestoreSources);
       https://api.nuget.org/v3/index.json;
@@ -11,13 +12,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0-preview2-final" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="0.4.0-preview1-10273" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0-rc1-final" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="0.4.0-preview1-10285" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.0.0-preview1-10009" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Blazorships.Client\Blazorships.Client.csproj" />
     <ProjectReference Include="..\Blazorships.Shared\Blazorships.Shared.csproj" />
   </ItemGroup>
-
-</Project>
+  </Project>
